k8s/oci/apps/encode-worker/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: encode-worker
  namespace: app-encode-worker
spec:
  selector:
    app: encode-worker
  ports:
    - port: 8080
      targetPort: 8080
      name: http
